--- a/style1.css
+++ b/style1.css
@@ -5,8 +5,8 @@
 }
 
 #main{
-    
-    background:linear-gradient(110deg,rgb(255, 226, 226),rgba(245, 223, 223, 0.493));
+    background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);  
+
     background-size: cover;
     background-position: center;
     text-transform: uppercase;
@@ -595,7 +595,7 @@ padding:100px 20px;
         .modchild{
             margin:60px auto;
         box-shadow: 2px 2px 20px white;
-            width:70%;
+            width:100%;
             height:70%;
             background-size: cover;
             background-position: center;
@@ -664,7 +664,7 @@ padding:100px 20px;
         .modchild{
             margin:60px auto;
         box-shadow: 2px 2px 20px white;
-            width:70%;
+            width:100%;
             height:70%;
             background-size: cover;
             background-position: center;
